change req user id method
