# docs/swagger.yaml
@@ -81,22 +81,19 @@ paths:
                     description: Successful response
                     content:
                         application/json: {}
-    /user/activity/{id}:
+    /user/activity:
         get:
-            parameters:
-            -   in: path
-                name: id
-                required: true
-                schema:
-                    type: string
             tags:
                 - user
             summary: get users activity
+            security:
+                - bearerAuth: []
             responses:
                 "200":
                     description: Successful response
                     content:
                         application/json: {}
+    /user/{id}:
         put:
             tags:
                 - user
@@ -114,7 +111,6 @@ paths:
                     description: Successful response
                     content:
                         application/json: {}
-    /user/{id}:
         delete:
             parameters:
             -   in: path
